Fix library overflow

--- a/src/main.scss
+++ b/src/main.scss
@@ -128,6 +128,9 @@ $rogue-cool-purple: #3e438e;
 		overflow: hidden;
 		background: url('../image/Magic_the_gathering-card_back.jpg');
 		background-size: cover;
+		&-empty {
+			background: black;
+		}
 	}
 }
 
